# Module37

HW/Task1/: CMakeLists.txt
HW/Task1_vol2/: CMakeLists.txt  calculatorgui.ui  calculatormainwindow.h  main.cpp
HW/Task2_vol2/: CMakeLists.txt  Main.qml  main.cpp
HW/Task3/: CMakeLists.txt  main.cpp  mainwindow.h  remoteCtrl.ui
Notes/Note1/: untitled.ui
Notes/Note1_CLion/: CMakeLists.txt  caller.ui  callermainwindow.h  main.cpp
Notes/Note2/: CMakeLists.txt  Main.qml  main.cpp
